# zinq

./: .editorconfig  .gitignore  AGENTS.md  Cargo.toml  Todo.md  docker-compose.yml
docs/: architecture.md  chats.md  emojis.md  event_log.md  idempotency.md  message_acks.md  messages.md  online_statuses.md  project.md  reactions.md  to_think_about.md
migrations/: 1.cql
scripts/: db.rs  test.rs
src/: config.rs  error.rs  main.rs  state.rs
src/app/: mod.rs
src/app/auth/: mod.rs  register_command.rs
src/application/: mod.rs
src/application/auth/: login_command.rs  mod.rs  refresh_token_command.rs  register_command.rs
src/application/chats/: add_chat_member_command.rs  create_chat_command.rs  delete_chat_member_command.rs  get_attachments_query.rs  get_chat_query.rs  get_dm_chat_query.rs  get_user_chats_query.rs  mod.rs
src/application/event_logs/: get_event_logs_query.rs  mod.rs
src/application/events/: event_publisher.rs  mod.rs
src/application/messages/: add_or_edit_message_command.rs  count_messages_query.rs  create_cloud_attachment_command.rs  delete_cloud_attachment_command.rs  get_last_messages_query.rs  get_message_acks_query.rs  get_messages_query.rs  message_ack_command.rs  mod.rs
src/application/meta_messages/: chat_create_meta_message.rs  chat_member_added_meta_message.rs  chat_member_removed_meta_message.rs  mod.rs
src/core/: mod.rs  validate.rs
src/domain/: event_handlers.rs  events.rs  mod.rs
src/domain/auth/: mod.rs  (+3 more)
src/gateway/: mod.rs
src/infra/: event_bus.rs  hash_handler.rs  id_generator.rs  jwks_service.rs  jwt_handler.rs  mod.rs  smtp_client.rs  totp_handler.rs
src/routers/: auth_router.rs  chat_router.rs  emoji_router.rs  event_listener.rs  mod.rs  sync_router.rs  user_router.rs  well_known_router.rs
src/tests/: add_chat_member_command_tests.rs  add_or_edit_message_command_tests.rs  create_chat_command_tests.rs  create_cloud_attachment_command_tests.rs  delete_chat_member_command_tests.rs  delete_cloud_attachment_command_tests.rs  get_attachments_query_tests.rs  get_chat_query_tests.rs  get_dm_chat_command_tests.rs  get_last_messages_query_tests.rs  get_messages_query_tests.rs  get_user_chats_query_tests.rs  mod.rs  register_command_tests.rs
(+105 files in other folders)
