[package]
name = "zinq"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.8", features = ["macros"] }
chrono = { version = "0.4.42", features = ["clock", "serde"] }
lazy_static = "1.5.0"
regex = "1.12.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
serde_path_to_error = "0.1.20"
tokio = { version = "1.49", features = ["full"] }
tower = "0.5.2"
validator = { version = "0.20.0", features = ["derive"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
dotenvy = "0.15.7"
socketioxide = { version = "0.18.0", features = ["extensions", "msgpack", "state"] }
uuid = { version = "1.19.0", features = ["v4"] }
rs-snowflake = "0.6.0"
async-trait = "0.1.89"
