[package]
name = "zinq"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.8", features = ["macros"] }
chrono = { version = "0.4.42", features = ["clock", "serde"] }
lazy_static = "1.5.0"
regex = "1.12.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
serde_path_to_error = "0.1.20"
tokio = { version = "1.49", features = ["full"] }
tower = "0.5.2"
validator = { version = "0.20.0", features = ["derive"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
dotenvy = "0.15.7"
socketioxide = { version = "0.18.0", features = ["extensions", "msgpack", "state"] }
uuid = { version = "1.19.0", features = ["v4"] }
rs-snowflake = "0.6.0"
async-trait = "0.1.89"
bitflags = "2.10.0"
scylla = { version = "1.4.1", features = ["chrono-04"] }
futures-util = "0.3.31"
testcontainers = "0.26.3"
testcontainers-modules = { version = "0.14.0", features = ["scylladb"] }
once_cell = "1.21.3"
ctor = "0.6.3"
anyhow = "1.0.100"
bcrypt = "0.16.0"
jsonwebtoken = "9.3.0"
lettre = { version = "0.11", features = ["tokio1-native-tls", "smtp-transport", "builder"] }
totp-rs = { version = "5.6", features = ["otpauth", "gen_secret"] }
base32 = "0.5.0"
urlencoding = "2.1.3"
rsa = "0.9"
pem = "3.0"
base64 = "0.22"
sha2 = "0.10"
clap = { version = "4", features = ["derive"] }

[[bin]]
name = "db"
path = "src/bin/db.rs"
